Update vercel.json configuration for proper static file handling

--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,10 @@
 {
     "version": 2,
     "routes": [
-        {
-            "src": "/(.*)",
-            "dest": "/$1"
-        }
+        { "handle": "filesystem" },
+        { "src": "/js/(.*)", "dest": "/js/$1" },
+        { "src": "/styles/(.*)", "dest": "/styles/$1" },
+        { "src": "/(.*)", "dest": "/$1" }
     ],
     "public": true
 }
